--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature's Platter</title>
+
     <!-- font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100..800&display=swap"
+        rel="stylesheet">
 
 
     <!-- daisy ui -->
@@ -39,6 +42,9 @@
             
             .accent{
                 color: #179800;
+            }
+            .poppins{
+                font-family: "Poppins", serif;
             }
         }
     </style>
@@ -295,7 +301,33 @@
             </div>
         </section>
 
-        
+        <!-- Arrival & Offers -->
+        <section class="container mx-auto my-12 md:my-32">
+            <h1 class="font-semibold text-2xl text-accent mb-8 mx-4 lg:mx-0">Arrival & Offers</h1>
+
+            <div class="md:flex gap-5">
+                <!-- card left -->
+                <div class="flex justify-between items-center md:w-7/12 bg-[#115414] rounded-xl mx-4 md:mx-0 mb-4 md:mb-0" >
+                    <div class="space-y-4 lg:space-y-8 pl-5">
+                        <div><img src="./assets/dawat-logo.png" alt="dawat-logo"></div>
+                        <button  class="poppins font-normal text-xs lg:text-2xl bg-[#63B76D]  text-white rounded-xl py-2 lg:py-4 px-4 lg:px-10 ">Cook Exotic Dishes</button>
+                        <h1 class="poppins text-[22px] lg:text-[40px] text-white">UP to <span class="font-bold">20% OFF</span></h1>
+                    </div>
+                    <div class="mt-5 md:mt-8"><img src="./assets/dawat-mock-up.png" alt=""></div>
+                </div>
+
+                <!-- card right  -->
+                <div class="flex justify-between items-center md:w-5/12 bg-[#115414] rounded-xl mx-4 md:mx-0">
+                    <div class="space-y-4 lg:space-y-8 pl-5">
+                        <div><img src="./assets/india-gate-logo.png" alt="dawat-logo" class="w-16 lg:w-[98px]"></div>
+                        <button  class="poppins font-normal text-xs lg:text-2xl bg-[#63B76D]  text-white rounded-xl py-2 lg:py-4 px-4 lg:px-6 ">World’s No.1 Rice</button>
+
+                        <h1 class="poppins text-[22px] lg:text-[40px] text-white">UP to <span class="font-bold">40% OFF</span></h1>
+                    </div>
+                    <div class="mt-5 md:mt-8 w-28 lg:w-44 mr-4"><img src="./assets/india-gate-mock-up.png" alt="" class="w-full"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
