--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
 
         <!-- hero -->
         <section class="container mx-auto text-center space-y-4 md:space-y-8 mt-12 lg:mt-20">
-            <h1
-                class="max-w-[341px] lg:max-w-[827px] mx-auto text-black font-semibold text-3xl md:text-4xl lg:text-5xl">
+            <h1 class="max-w-[341px] lg:max-w-[827px] mx-auto text-black font-semibold text-3xl md:text-4xl lg:text-5xl">
                 Freshness <span class="accent">You Can Count</span> On, Prices You’ll Love!</h1>
-            <p class="max-w-[349px] lg:max-w-[800px] mx-auto text-black text-base md:text-xl">Shop your daily essentials
+            <p class="max-w-[349px] lg:max-w-[800px] mx-auto text-black text-base md:text-xl">
+                Shop your daily essentials
                 at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
             <div class="lg:max-w-[1031px] mx-auto"><img class="w-full" src="./assets/hero-vegetables.png"
                     alt="vegetables"></div>
         </section>
     </header>
+
     <main>
         <!-- Services -->
         <section class="container mx-auto my-12 md:my-32">
@@ -301,17 +302,62 @@
             </div>
         </section>
 
+        <!-- FAQ -->
+        <section class="container mx-auto my-12  md:my-32 ">
+            <h1 class="font-bold text-3xl text-teal-500 text-center mb-12">Frequently Asked Questions</h1>
+            <div class="flex items-center gap-6">
+                <div class="w-1/2 "><img src="./assets/food.png" alt="food" class="w-full lg:w-4/6 rounded-xl"></div>
+
+                <div class="w-1/2">
+                    <div class="join join-vertical w-full space-y-10">
+                    
+                        <div class="collapse collapse-arrow join-item border-base-300 border">
+                            <input type="radio" name="my-accordion-4" checked="checked" />
+                            <div class="collapse-title text-2xl font-medium">How can I track or modify my order?
+                            </div>
+                            <div class="collapse-content text-xl">
+                                <p>Once your order has been shipped a tracking link will be generated which will be sent to you via email and whatsapp. You can use this link to track your order. For modifications, you can contact us via whatsapp or email for upto 3 days from the day you place the order.</p>
+                            </div>
+                        </div>
+
+                        <div class="collapse collapse-arrow join-item border-base-300 border">
+                            <input type="radio" name="my-accordion-4" checked="checked" />
+                            <div class="collapse-title text-2xl font-medium">Why should I buy from The Plated Project?
+                            </div>
+                            <div class="collapse-content text-xl">
+                                <p>All our dinnerware is carefully designed in collaboration with global artists with an artistic concept running through each collection & each piece comes with a thoughtfully crafted story card that surrounds a social issue. With every piece you buy you will also sponsor at least 10 meals for the hungry fighting the global hunger crisis with art.</p>
+                            </div>
+                        </div>
+
+                        <div class="collapse collapse-arrow join-item border-base-300 border">
+                            <input type="radio" name="my-accordion-4" checked="checked" />
+                            <div class="collapse-title text-2xl font-medium">How long will it take for an international orders to reach me?
+                            </div>
+                            <div class="collapse-content text-xl">
+                                <p>We generally deliver international orders within 12-15 business days.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Arrival & Offers -->
-        <section class="container mx-auto my-12 md:my-32">
+        <section class="container mx-auto mt-12 md:mt-32 mb-[450px] md:mb-96">
             <h1 class="font-semibold text-2xl text-accent mb-8 mx-4 lg:mx-0">Arrival & Offers</h1>
 
             <div class="md:flex gap-5">
                 <!-- card left -->
-                <div class="flex justify-between items-center md:w-7/12 bg-[#115414] rounded-xl mx-4 md:mx-0 mb-4 md:mb-0" >
+                <div
+                    class="flex justify-between items-center md:w-7/12 bg-[#115414] rounded-xl mx-4 md:mx-0 mb-4 md:mb-0">
                     <div class="space-y-4 lg:space-y-8 pl-5">
                         <div><img src="./assets/dawat-logo.png" alt="dawat-logo"></div>
-                        <button  class="poppins font-normal text-xs lg:text-2xl bg-[#63B76D]  text-white rounded-xl py-2 lg:py-4 px-4 lg:px-10 ">Cook Exotic Dishes</button>
-                        <h1 class="poppins text-[22px] lg:text-[40px] text-white">UP to <span class="font-bold">20% OFF</span></h1>
+                        <button
+                            class="poppins font-normal text-xs lg:text-2xl bg-[#63B76D]  text-white rounded-xl py-2 lg:py-4 px-4 lg:px-10 ">Cook
+                            Exotic Dishes</button>
+                        <h1 class="poppins text-[22px] lg:text-[40px] text-white">UP to <span class="font-bold">20%
+                                OFF</span></h1>
                     </div>
                     <div class="mt-5 md:mt-8"><img src="./assets/dawat-mock-up.png" alt=""></div>
                 </div>
@@ -320,17 +366,68 @@
                 <div class="flex justify-between items-center md:w-5/12 bg-[#115414] rounded-xl mx-4 md:mx-0">
                     <div class="space-y-4 lg:space-y-8 pl-5">
                         <div><img src="./assets/india-gate-logo.png" alt="dawat-logo" class="w-16 lg:w-[98px]"></div>
-                        <button  class="poppins font-normal text-xs lg:text-2xl bg-[#63B76D]  text-white rounded-xl py-2 lg:py-4 px-4 lg:px-6 ">World’s No.1 Rice</button>
+                        <button
+                            class="poppins font-normal text-xs lg:text-2xl bg-[#63B76D]  text-white rounded-xl py-2 lg:py-4 px-4 lg:px-6 ">World’s
+                            No.1 Rice</button>
 
-                        <h1 class="poppins text-[22px] lg:text-[40px] text-white">UP to <span class="font-bold">40% OFF</span></h1>
+                        <h1 class="poppins text-[22px] lg:text-[40px] text-white">UP to <span class="font-bold">40%
+                                OFF</span></h1>
                     </div>
-                    <div class="mt-5 md:mt-8 w-28 lg:w-44 mr-4"><img src="./assets/india-gate-mock-up.png" alt="" class="w-full"></div>
+                    <div class="mt-5 md:mt-8 w-28 lg:w-44 mr-4"><img src="./assets/india-gate-mock-up.png" alt=""
+                            class="w-full"></div>
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
 
+    </main>
+
+    <footer class="bg-accent relative">
+        <!-- Grocery News -->
+        <section
+            class="container mx-auto absolute bottom-[25%] md:bottom-[30%] lg:bottom-[25%] left-1/2 transform -translate-y-1/2 -translate-x-1/2">
+            <div class="bg-secoundry mx-4 md:mx-0 md:flex md:items-center rounded-3xl">
+                <div class="w-full lg:w-6/12 md:mx-0 pt-8 md:pt-0 pb-6 md:pb-0">
+                    <img src="./assets/vegetable-busket.png" alt="" class="md:w-11/12 lg:w-9/12 mx-auto ">
+                </div>
+                <div class="text-center md:text-left md:py-24">
+
+                    <h1 class="font-bold text-2xl lg:text-4xl text-accent">Get Grocery News!</h1>
+
+                    <p class="font-normal text-base lg:text-xl text-black px-7 md:px-0 pt-3 lg:pt-5 pb-5 lg:pb-9">
+                        Exclusive training tips, ticks, product deals and more.</p>
+
+                    <input type="email" placeholder="Enter email...." class="input w-3/4 text-lg"><br>
+
+                    <button
+                        class="btn bg-accent text-white text-sm lg:text-xl mt-3 lg:mt-9 mb-10 md:mb-0 ">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- footer  -->
+        <footer
+            class="footer container mx-auto text-base-content justify-between items-end pt-[300px] md:pt-70 px-5 md:px-0 pb-12 md:pb-36">
+            <div>
+                <img src="./assets/logo-footer.png" alt="logo">
+                <p class="mt-3 max-w-[426px] text-xl text-[#ffffffb3]">Discover a world of treats, toys, and essentials
+                    handpicked for your furry friends</p>
+            </div>
+            <ul class="text-white">
+                <li><a class="text-xl">Product</a></li>
+                <li><a class="text-xl py-5">Services</a></li>
+                <li><a class="text-xl">Contact us</a></li>
+            </ul>
+
+            <div class="text-white">
+                <h1 class="font-medium text-base pb-4">Follow Us</h1>
+                <div class="flex gap-7">
+                    <img src="./assets/icon/f.png" alt="">
+                    <img src="./assets/icon/i.png" alt="">
+                    <img src="/assets/icon/l.png" alt="">
+                    <img src="./assets/icon/y.png" alt="">
+                </div>
+            </div>
+        </footer>
     </footer>
 </body>
 
