--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
         <!-- FAQ -->
         <section class="container mx-auto my-12  md:my-32 ">
             <h1 class="font-bold text-3xl text-teal-500 text-center mb-12">Frequently Asked Questions</h1>
-            <div class="flex items-center gap-6">
-                <div class="w-1/2 "><img src="./assets/food.png" alt="food" class="w-full lg:w-4/6 rounded-xl"></div>
+            <div class="md:flex items-center gap-6 px-4 ">
+                <div class="w-1/2 mx-auto"><img src="./assets/food.png" alt="food" class="w-full lg:w-4/6 rounded-xl"></div>
 
-                <div class="w-1/2">
+                <div class="md:w-1/2 mt-8 md:mt-0">
                     <div class="join join-vertical w-full space-y-10">
 
                         <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -437,7 +437,7 @@
 
             <div class="text-white">
                 <h1 class="font-medium text-base pb-4">Follow Us</h1>
-                <div class="flex gap-7">
+                <div class="flex gap-3 lg:pr-4">
                     <img src="./assets/icon/f.png" alt="">
                     <img src="./assets/icon/i.png" alt="">
                     <img src="/assets/icon/l.png" alt="">
