--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <!-- footer  -->
         <footer
             class="footer container mx-auto text-base-content justify-between items-end pt-[300px] md:pt-70 px-5 md:px-0 pb-12 md:pb-36">
-            <div>
+            <div class="lg:pl-4">
                 <img src="./assets/logo-footer.png" alt="logo">
                 <p class="mt-3 max-w-[426px] text-xl text-[#ffffffb3]">Discover a world of treats, toys, and essentials
                     handpicked for your furry friends</p>
@@ -437,11 +437,11 @@
 
             <div class="text-white">
                 <h1 class="font-medium text-base pb-4">Follow Us</h1>
-                <div class="flex gap-3 lg:pr-4">
-                    <img src="./assets/icon/f.png" alt="">
-                    <img src="./assets/icon/i.png" alt="">
-                    <img src="/assets/icon/l.png" alt="">
-                    <img src="./assets/icon/y.png" alt="">
+                <div class="flex gap-3 lg:pr-6">
+                    <div class="w-6 h-6"><img class="w-full" src="./assets/icon/f.png" alt=""></div>
+                    <div class="w-6 h-6"><img class="w-full" src="./assets/icon/i.png" alt=""></div>
+                    <div class="w-6 h-6"><img class="w-full" src="/assets/icon/l.png" alt=""></div>
+                    <div class="w-6 h-6"><img class="w-full" src="./assets/icon/y.png" alt=""></div>
                 </div>
             </div>
         </footer>
