--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <div class="flex gap-3 lg:pr-6">
                     <div class="w-6 h-6"><img class="w-full" src="./assets/icon/f.png" alt=""></div>
                     <div class="w-6 h-6"><img class="w-full" src="./assets/icon/i.png" alt=""></div>
-                    <div class="w-6 h-6"><img class="w-full" src="/assets/icon/l.png" alt=""></div>
+                    <div class="w-6 h-6"><img class="w-full text-white " src="/assets/icon/l.png" alt=""></div>
                     <div class="w-6 h-6"><img class="w-full" src="./assets/icon/y.png" alt=""></div>
                 </div>
             </div>
