--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@
             <div class="text-white">
                 <h1 class="font-medium text-base pb-4">Follow Us</h1>
                 <div class="flex gap-3 lg:pr-6">
-                    <div class="w-6 h-6"><img class="w-full" src="./assets/icon/f.png" alt=""></div>
-                    <div class="w-6 h-6"><img class="w-full" src="./assets/icon/i.png" alt=""></div>
-                    <div class="w-6 h-6"><img class="w-full text-white " src="/assets/icon/l.png" alt=""></div>
-                    <div class="w-6 h-6"><img class="w-full" src="./assets/icon/y.png" alt=""></div>
+                    <div ><img src="./assets/icon/f.png" alt="f"></div>
+                    <div ><img src="./assets/icon/i.png" alt="i"></div>
+                    <div ><img src="./assets/icon/l.png" alt="l"></div>
+                    <div ><img src="./assets/icon/y.png" alt="y"></div>
                 </div>
             </div>
         </footer>
