--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <div class="flex gap-3 lg:pr-6">
                     <div ><img src="./assets/icon/f.png" alt="f"></div>
                     <div ><img src="./assets/icon/i.png" alt="i"></div>
-                    <div ><img src="./assets/icon/l.png" alt="l"></div>
+                    <div ><img src="./assets/icon/in.png" alt="in"></div>
                     <div ><img src="./assets/icon/y.png" alt="y"></div>
                 </div>
             </div>
