--- a/index.html
+++ b/index.html
@@ -401,11 +401,12 @@
     <footer class="bg-accent relative">
         <!-- Grocery News -->
         <section
-            class="container mx-auto absolute bottom-[25%] md:bottom-[30%] lg:bottom-[25%] left-1/2 transform -translate-y-1/2 -translate-x-1/2">
+            class="container mx-auto absolute bottom-[25%] md:bottom-[30%] lg:bottom-[25%] 2xl:bottom-[15%] left-1/2 transform -translate-y-1/2 -translate-x-1/2">
             <div class="bg-secoundry mx-4 md:mx-0 md:flex md:items-center rounded-3xl">
-                <div class="w-full lg:w-6/12 md:mx-0 pt-8 md:pt-0 pb-6 md:pb-0">
-                    <img src="./assets/vegetable-busket.png" alt="" class="md:w-11/12 lg:w-9/12 mx-auto ">
+                <div class="w-full lg:w-6/12 md:mx-0 py-8 md:py-11">
+                    <img src="./assets/vegetable-busket.png" alt="vegetable" class="md:w-11/12 lg:w-9/12 mx-auto ">
                 </div>
+
                 <div class="text-center md:text-left md:py-24">
 
                     <h1 class="font-bold text-2xl lg:text-4xl text-accent">Get Grocery News!</h1>
