--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature's Platter</title>
+    <link rel="shortcut icon" href="./assets/icon/logo.png" type="image/x-icon">
 
     <!-- font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,7 +119,7 @@
             <p class="max-w-[349px] lg:max-w-[800px] mx-auto text-black text-base md:text-xl element2">
                 Shop your daily essentials
                 at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
-            <div class="lg:max-w-[1031px] mx-auto"><img class="w-full " src="./assets/hero-vegetables.png"
+            <div class="animate-pulse lg:max-w-[1031px] mx-auto"><img class="w-full " src="./assets/hero-vegetables.png"
                     alt="vegetables"></div>
         </section>
     </header>
